# meta-tsundr-next-gen

./: .dockerignore  .env.local  .envrc.example  .gitignore  .tmux-broadcast.sh  .tmux-capture.sh  .tmux-panes.env  .tmux-send-task.sh  .tmux-status.sh  CLAUDE.md  Dockerfile  Dockerfile.agent-service  Makefile  README.md  Taskfile.yml  buf.gen.yaml  buf.yaml  docker-compose.yml  next.config.ts  package-lock.json  package.json  promptfooconfig.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tasks-example.txt  tasks-test.txt  tsconfig.agent-service.json  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yaml  playwright.yml  security.yaml
agent-service/: Dockerfile  pyproject.toml
agent-service/proto/tsundoku/agent/v1/: agent.proto
agent-service/src/: server.py
agent-service/src/agents/: __init__.py  book_recommend.py  book_review.py
backend/: Dockerfile  go.mod  go.sum
docs/: API-REFERENCE.md  DESIGN-python-agent-grpc.md  DEVELOPER-GUIDE.md  PROPOSAL-purchase-tracker.md  PROPOSAL-service-integrations.md  SETUP-AMAZON-PAAPI.md  SETUP-API-KEYS.md  SETUP-GMAIL.md  SETUP-NOTION.md  SETUP-SENTRY.md  SETUP-SLACK.md
docs/adr/: ADR-001-next-gen-architecture.md
evidence/: EVIDENCE-REPORT.md  SECURITY-AUDIT-2026-03-31.md
evidence/night-run/: latest
ocr-service/: Dockerfile  pyproject.toml
prisma/: schema.prisma
public/: manifest.json  sw.js
scripts/: capture-evidence.ts  docker-dev.sh  k8s-cleanup.sh  k8s-local-deploy.sh  run-evals.sh  security-check.sh
src/: instrumentation-client.ts
(+341 files in other folders)
