[project]
name = "meta-tsundr-agent-service"
version = "0.1.0"
description = "Python gRPC Agent Service for Meta-tsundr"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "grpcio-reflection>=1.68.0",
    "grpcio-health-checking>=1.68.0",
    "anthropic>=0.42.0",
    "protobuf>=5.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
